--- a/src/app/platform/profesor-leader/aula-projects/aula-projects.component.html
+++ b/src/app/platform/profesor-leader/aula-projects/aula-projects.component.html
@@ -1,7 +1,7 @@
   <h2>Proyectos de Aula</h2>
   
-  <div class="flex flex-row flex-wrap card-container blue-container">
-    <p-card *ngFor="let aulaProject of aulaProjects" class=" flex m-auto mb-3" [style]="{ width: '100%' }">
+  <div class="flex flex-wrap card-container blue-container">
+    <p-card *ngFor="let aulaProject of aulaProjects" class=" flex ml-5 mb-3" [style]="{ width: '300px' } ">
          
             
                 <h3>{{ aulaProject.nombre }}</h3>
