--- a/src/app/platform/workplans/work-plans/work-plans.component.html
+++ b/src/app/platform/workplans/work-plans/work-plans.component.html
@@ -7,7 +7,7 @@
 
           <h3>Plan de Trabajo #{{ workplan.id}}</h3>
           <p> Año: <strong>{{ workplan.anio }}</strong> </p>
-          <p> Cierre: <span class="text-danger">{{ workplan.cierre }}</span> </p>
+          <p> Observacion: <span class="text-danger">{{ workplan.cierre }}</span> </p>
 
       </p-card>
 
