--- a/src/app/platform/profesor-leader/activities/activities.component.html
+++ b/src/app/platform/profesor-leader/activities/activities.component.html
@@ -67,8 +67,7 @@
   </ng-template>
   </p-table>
 
-  <p-button label="Volver a proyectos de aula" [routerLink]="['/pl/projects/view'] ">
-  </p-button>
+  <p-button label="Volver a proyectos de aula" [routerLink]="['/pl/projects/view'] "></p-button>
 </p-card>
 <!--div class="container-fluid">
   <div class="row">
