--- a/src/app/platform/workplans/list-work-plans/list-work-plans.component.html
+++ b/src/app/platform/workplans/list-work-plans/list-work-plans.component.html
@@ -7,8 +7,10 @@
 
     <p-dialog header="Agregar Plan de trabajo" styleClass="w-6" [(visible)]="showDialog" [modal]="true" [draggable]="false" [resizable]="false">
       <form class="p-5" (ngSubmit)="createWorkPlan()" [formGroup]="form">
-        <p-calendar styleClass="w-full mb-4" formControlName="anio" view="year" dateFormat="yy" inputId="yearpicker"></p-calendar>
-        <textarea rows="5" pInputTextarea  class="w-full mb-4" placeholder="cierre" formControlName="cierre"></textarea>
+
+        <p-calendar  placeholder="Año" styleClass="w-full mb-4" formControlName="anio" view="year" dateFormat="yy" inputId="yearpicker"></p-calendar>
+                
+        <textarea rows="5" pInputTextarea  class="w-full mb-4" placeholder="Leccion aprendida" formControlName="cierre"></textarea>
 
         <p-dropdown placeholder="Eje transversal" styleClass="w-full mb-4" appendTo="body" formControlName="id_eje_transversal" [options]="transversalAxis" optionValue="id" optionLabel="nombre"></p-dropdown>
 
@@ -43,7 +45,7 @@
             Eje Transversal <p-sortIcon field="id_eje_transversal"></p-sortIcon>
           </th>
           <th pSortableColumn="cierre">
-            Cierre <p-sortIcon field="cierre"></p-sortIcon>
+            Observaciones <p-sortIcon field="cierre"></p-sortIcon>
           </th>
           <th></th>
         </tr>
@@ -66,86 +68,5 @@
       </tr>
   </ng-template>
   </p-table>
+  
 </p-card>
-<!-- div class="container-fluid">
-  <h1 class="h3 mb-2 text-gray-800">Planes de Trabajo</h1>
-  <hr />
-  <div class="row">
-    <div class="col-12 col-lg-5 mr-auto">
-      <div class="card border-left-primary shadow p-4">
-        <form class="user" (ngSubmit)="createWorkPlan()" [formGroup]="form">
-          <div class="form-group">
-            <input
-              type="number"
-              class="form-control form-control-user"
-              id="anio"
-              placeholder="Año"
-              formControlName="anio"
-            />
-          </div>
-          <hr />
-          <div>
-            <textarea
-              type="text"
-              class="form-control"
-              id="cierre"
-              placeholder="Cierre..."
-              formControlName="cierre"
-            >
-            </textarea>
-          </div>
-          <hr />
-          <div>
-            <div class="form-group">
-              <label for="exampleFormControlSelect1">Eje Transversal</label>
-              <select
-                class="form-control"
-                id="exampleFormControlSelect1"
-                formControlName="id_eje_transversal"
-              >
-                <option
-                  *ngFor="let axis of transversalAxis"
-                  value="{{ axis.id }}"
-                >
-                  <strong>{{ axis.nombre }}</strong>
-                </option>
-              </select>
-            </div>
-          </div>
-          <button type="submit" class="btn btn-primary btn-user btn-block">
-            Crear Plan de Trabajo
-          </button>
-        </form>
-      </div>
-    </div>
-    <div class="card shadow col-12 col-lg-7">
-      <div class="card-body">
-        <div class="table-responsive">
-          <table
-            class="table table-bordered"
-            id="dataTable"
-            width="100%"
-            cellspacing="0"
-          >
-            <thead>
-              <tr>
-                <th>Id</th>
-                <th>Año</th>
-                <th>Eje Transversal</th>
-                <th>Cierre</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let workplan of workplans">
-                <td>{{ workplan.id }}</td>
-                <td>{{ workplan.anio }}</td>
-                <td>{{ transversalAxis[workplan.id_eje_transversal].nombre }}</td>
-                <td>{{ workplan.cierre }}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-</div -->
